[package]
name = "hft-mock-rs"
version = "0.1.0"
edition = "2018"

[[example]]
path = "examples/rem_server.rs"
name = "rem_server"

[dependencies]
bytes = "1"
chrono = "0.4.26"
core_affinity = "0.7"
parking_lot = "0.11.1"
rand = "0.8.4"
rem = { path = "../Rem" }
sailfish = { version = "0.8", defaut-features = false }
tokio = { version = "1.32", features = ["io-util", "macros", "rt"] }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
fall = { version = "0.1" }
xitca-http = "0.1"
xitca-io = "0.1"
xitca-server = "0.1"
xitca-service = "0.1"
xitca-unsafe-collection = "0.1"

[dev-dependencies]
mimalloc = { version = "0.1.38", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
fall = { path = "../fall" }
recv = { path = "../recv" }

xitca-http = { git = "https://github.com/HFQR/xitca-web", rev = "c5b22169db1dde1a2411872cffa5b6bd7e14d2f4" }
xitca-io = { git = "https://github.com/HFQR/xitca-web", rev = "c5b22169db1dde1a2411872cffa5b6bd7e14d2f4" }
xitca-server = { git = "https://github.com/HFQR/xitca-web", rev = "c5b22169db1dde1a2411872cffa5b6bd7e14d2f4" }
xitca-service = { git = "https://github.com/HFQR/xitca-web", rev = "c5b22169db1dde1a2411872cffa5b6bd7e14d2f4" }
xitca-unsafe-collection = { git = "https://github.com/HFQR/xitca-web", rev = "c5b22169db1dde1a2411872cffa5b6bd7e14d2f4" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"